# sectest

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation-kali-sandbox-llm-gateway/: 01-CONTEXT.md  01-DISCUSSION-LOG.md  PLAN.md  RESEARCH.md  VERIFICATION.md
.planning/phases/02-engine/: 02-CONTEXT.md
.planning/phases/03-asset-management/: 03-CONTEXT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: litellm_config.yaml
docker/: .dockerignore  Dockerfile.kali  build.sh
src/sectest/: __init__.py  main.py  streaming.py
src/sectest/agents/: __init__.py  recon.py
src/sectest/llm/: __init__.py  config.py  provider.py
src/sectest/sandbox/: __init__.py  manager.py
tests/: conftest.py  manual_smoke.md  test_e2e_smoke.py  test_litellm_config.py  test_llm_provider.py  test_main.py  test_recon_agent.py  test_sandbox_manager.py
