[project]
name = "sectest"
version = "0.1.0"
description = "Unified AI Security Testing Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents[docker]==0.17.5",
    "openai>=1.0.0",
    "docker>=7.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.50.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
